add some libs and example-codes

--- a/test-examples/testDebounce.html
+++ b/test-examples/testDebounce.html
@@ -15,8 +15,9 @@
         <button id="btn2">Click Btn2</button>
 
     </div>
-    <script crossorigin src="https://unpkg.com/jquery@3.4.1/dist/jquery.js"></script>
-    <script src="../libs/lodash.custom.min.js"></script>
+    <script crossorigin src="https://unpkg.com/jquery@1.11.3/dist/jquery.js"></script>
+    <script src="../libs/lodash.custom.min-v3.10.1.js"></script>
+    <!-- <script src="../libs/es5-shim.min.js"></script> -->
     <script src="./debounceExample01.js"></script>
 </body>
 </html>
